# yyy

./: .claude.json  .gitignore  .mcp.json  CLAUDE.md  GEMINI.md  README.md  agents.md  config.json  package-lock.json  pyproject.toml  run_claude.sh  run_debug.bat  run_server01_dev.bat  run_server01_dev.sh  run_server01_prod.bat  run_server02_dev.bat  run_server02_prod.bat
.serena/: project.yml
.taskmaster/: state.json
.taskmaster/docs/: prd.md
.taskmaster/tasks/: tasks.json
doc/: a0009_script.md  code-review.md  commit-commands.md  context7.md  d0001_prd.md  d0002_plan.md  d0004_todo.md  d0007_command.md  d0009_env.md  d0010_history.md  d0200_vibe_coding_process.md  dalgorithm_prd.md  feature-dev.md  frontend-design.md  paper-search-tools.md  playwright.md  pyright-lsp.md  security-guidance.md  serena.md  typescript-lsp.md
src/: convert_images.py  process_food_info.py  test_ocr.py
tests/: conftest.py  test_page_import.py
tmp/: add_version_cmd.py  context_memory.json  fix_encoding.py  gen_samples.py
v/: oaisaddtodo.md  oaisbatch.md  oaisbook.md  oaischeck.md  oaiscommand.md  oaiscommit.md  oaiscontext.md  oaisdb.md  oaisdev.md  oaisdoc.md  oaisenv.md  oaisfix.md  oaishelp.md  oaishistory.md  oaislib.md  oaispaper.md  oaispencil.md  oaisplan.md  oaisppt.md  oaisprd.md  oaisreport.md  oaisrun.md  oaisskill.md  oaisstart.md  oaisstop.md  oaisstreamlit.md  oaissurvey.md  oaissync.md  oaistest.md  oaistodo.md  oaisuser.md  oaisuv.md  oaisword.md
v/agent/: academic-researcher.md  codebase_investigator.md  jupyter-specialist.md  oaisppt-agent.md  translator.md  (+5 more)
(+100 files in other folders)
